Fix alignment of CI icon (#1235)

--- a/source/content.css
+++ b/source/content.css
@@ -743,6 +743,10 @@ a.tabnav-extra[href$='mastering-markdown/'] {
 	animation: fade-in 0.2s;
 }
 
+.rgh-ci-link .octicon {
+	margin-top: 0 !important;
+}
+
 :root .repohead h1 .commit-build-statuses .octicon {
 	position: static;
 	color: inherit;
